--- a/MyPortfolio-main/Portfolio/index.html
+++ b/MyPortfolio-main/Portfolio/index.html
@@ -54,7 +54,7 @@
           Hello! I'm
           <div class="line"></div>
         </h1>
-        <span class="name">Vishal Mishra</span>
+        <span class="name">RAJ</span>
         <p>
           This is my offical portfolio website to showcase my all works related
           to Frontend web development
